Fixed gap in section about

--- a/assets/scss/common/_classes.scss
+++ b/assets/scss/common/_classes.scss
@@ -5,7 +5,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.125rem;
   padding-right: 1em;
   padding-left: 1em;
   border-width: 2px;
