--- a/assets/scss/components/sections/_section-form.scss
+++ b/assets/scss/components/sections/_section-form.scss
@@ -14,17 +14,6 @@
       grid-template-columns: repeat(2, 1fr);
     }
   }
-  // & .btn--primary:hover {
-  //   background-color: $color-accent;
-  //   border-color: 2px solid $color-light;
-  // }
-  // & .btn--primary {
-  //   width: 100%;
-  //   color: $color-light;
-  //   border-color: rgba(255, 255, 255, 0);
-  //   border-bottom-color: rgba(255, 255, 255, 0.2);
-  //   background-color: rgba(255, 255, 255, 0.1);
-  // }
 }
 .form-item {
   &:nth-of-type(1) {
@@ -33,6 +22,7 @@
     }
   }
   &__input {
+    outline: none;
     display: block;
     width: 100%;
     height: 60px;
@@ -40,11 +30,22 @@
     padding-left: 30px;
     transition: background-color 0.5s, border-color 0.5s;
     letter-spacing: 0.15em;
-    color: $color-light;
+    color: #38405a;
     border: 2px solid rgba(255, 255, 255, 0);
     border-bottom-color: rgba(255, 255, 255, 0.25);
     background-color: rgba(255, 255, 255, 0.05);
     font-size: 1.125rem;
+    &:hover,
+    &:focus {
+      border: 2px solid #5e657a;
+      background-color: #4c546b;
+      border-bottom-color: $color-light;
+      transition: border-color 0.5s, background-color 0.5s;
+      &::placeholder {
+        color: $color-light;
+        transition: color 0.5s;
+      }
+    }
   }
   & .btn--primary {
     width: 100%;
